# SuperF4

./: Cargo.toml  README.md  blacklist.json  install.bat  main.spec  package-lock.json  package.json  run - Copy.bat
SuperF4/: package.json
SuperF4/src/: index.html
SuperF4/src-tauri/: Cargo.toml  tauri.conf.json
SuperF4/src-tauri/src/: main.rs
SuperFetch/: .gitignore  Superfetch.py  Superfetch.spec  main.pyw  toStartMenu.ps1
WindowsTool/: Cargo.toml  blacklist.json  build.rs
WindowsTool/src/: main.rs
rust/: Cargo.toml
rust/src/: main.rs
src/: index.html  main.js  main.rs  r.bat  styles.css
src-tauri/: Cargo.toml  blacklist.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
